Slightly better structure, with banner images. Still needs clearer title over background image.

--- a/s2i2-hep-si2-pi-workshop-2017.tex
+++ b/s2i2-hep-si2-pi-workshop-2017.tex
@@ -18,39 +18,49 @@
 \begin{document}
 \begin{frame}{} 
 
-\begin{textblock}{20}(2,2)
+%\begin{textblock}{20}(2,2)
+%\begin{center}
+%\begin{figure}[tbph]
+%\centering
+%%\includegraphics[width=0.45\textwidth]{dianahep-logo.png}
+%\includegraphics[width=0.70\textwidth]{images/diana-hep-06-logo-horizontal.png}
+%\end{figure}
+%\url{http://s2i2-hep.org}
+%\end{center}
+%\end{textblock}
+
+
+
+\begin{textblock}{84.0}(1,2)
 \begin{center}
-\begin{figure}[tbph]
-\centering
-%\includegraphics[width=0.45\textwidth]{dianahep-logo.png}
-\includegraphics[width=0.70\textwidth]{images/diana-hep-06-logo-horizontal.png}
-\end{figure}
-\url{http://s2i2-hep.org}
+\includegraphics[width=0.95\textwidth]{images/s2i2-banner.jpg}
+%\begin{LARGE}
+%S2I2-HEP - Conceptualization of an S2I2 Institute for High Energy Physics
+%\end{LARGE}
 \end{center}
 \end{textblock}
 
-
-\begin{textblock}{84.0}(6,2)
-\usebackgroundtemplate{
-\includegraphics[width=\paperwidth,
-height=\paperheight]{images/s2i2-banner.jpg}
+\begin{textblock}{84.0}(1,4)
+\begin{center}
+\begin{huge}
+\color{white}{
+S2I2-HEP - Conceptualization of an S2I2 Institute for High Energy Physics
 }
+\end{huge}
+\end{center}
+\end{textblock}
+
+\begin{textblock}{84.0}(6,7)
 \begin{center}
 \begin{LARGE}
-S2I2-HEP - Conceptualization of an S2I2 Institute for High Energy Physics
+\color{white}{
+PIs: Peter Elmer (Princeton U.), Mark Neubauer (U.Illinois Urbana-Champaign), \\ Mike Sokoloff (U.Cincinnati)
+}
 \end{LARGE}
 \end{center}
 \end{textblock}
 
-\begin{textblock}{84.0}(6,5)
-\begin{center}
-\begin{Large}
-PIs: Peter Elmer (Princeton U.), Mark Neubauer (U.Illinois Urbana-Champaign), \\ Mike Sokoloff (U.Cincinnati)
-\end{Large}
-\end{center}
-\end{textblock}
-
-\begin{textblock}{38.0}(4,10)
+\begin{textblock}{38.0}(4,14)
 \begin{block}{High Energy Physics (HEP)}
 %\begin{center}
 The quest to understand the fundamental building blocks of nature,
@@ -76,9 +86,9 @@ aim to answer these questions over the next 20 years.
 \centering
 \includegraphics[width=0.48\textwidth]{images/0910152_02-A5-at-72-dpi.jpg}
 \includegraphics[width=0.50\textwidth]{images/eemm_run195099_evt137440354_ispy_3d-annotated-2.png}
-\begin{center}
-{\small \copyright~2009-2016 CERN (License: CC-BY-SA-4.0)}
-\end{center}
+%\begin{center}
+%{\small \copyright~2009-2016 CERN (License: CC-BY-SA-4.0)}
+%\end{center}
 \end{figure}
 \end{block}
 \end{textblock}
@@ -86,8 +96,7 @@ aim to answer these questions over the next 20 years.
 
 
 
-%\begin{textblock}{38.0}(4,10)
-\begin{textblock}{38.0}(44,10)
+\begin{textblock}{38.0}(44,14)
 \begin{block}{The DIANA/HEP Project}
 The primary goal of DIANA/HEP is to develop state-of-the-art tools
 for experiments which acquire, reduce, and analyze petabytes of
@@ -110,34 +119,6 @@ by more than a factor of 100.
 
 
 
-\begin{textblock}{38.0}(44,25.0)
-\begin{block}{The HEP Analysis Software Ecosystem}
-ROOT (\url{https://root.cern.ch}) is
-the {\em de-facto} home for most community analysis
-software developed in particle physics and related fields. Begun at CERN in 1995,
-it provides a sophisticated data format and serialization technology
-%(used, as an example, for 200 PB of LHC Run 1 data)
-as well as key software tools for
-data modeling, likelihood fitting, statistics and
-multivariate data analysis. It also has a broader range of
-functionalities, not strictly tied to the data-intensive aspects
-of our science, including interactive C++ analysis, histogramming,
-graphics (2D and 3D), math libraries (matrix algebra), image manipulation,
-and tools for distributed computing. Despite many pioneering and
-innovative features, the components are seen as too coupled,
-and limited by design decisions taken 20 years ago.
-Given the challenges from technology evolution and analysis complexity,
-we are at a point in the software lifecycle where large changes are needed,
-much as ROOT replaced an earlier generation of
-FORTRAN-based tools (PAW, HBOOK).
-%ROOT is, however, the starting
-%point for any plan to enable the our community to
-%exploit exabyte-scale data sets.
-DIANA/HEP is building on and improving these
-community libraries, moving other existing software elements into
-community libraries, and developing additional new tools.
-\end{block}
-\end{textblock}
 
 
 
@@ -147,7 +128,12 @@ community libraries, and developing additional new tools.
 
 \begin{textblock}{38.0}(44,102)
 \begin{block}{Acknowledgement}
-This project is supported by National Science Foundation grants ACI-1558216, ACI-1558219, and ACI-1558233. Any opinions, findings, conclusions or recommendations expressed in this material are those of the developers and do not necessarily reflect the views of the National Science Foundation.
+This project is supported by National Science Foundation grants ACI-1558216, ACI-1558219, and ACI-1558233. Any opinions, findings, conclusions or recommendations expressed in this material are those of the developers and do not necessarily reflect the views of the National Science Foundation. \\
+%~~\\
+%\begin{center}
+Images \copyright~2009-2016 CERN (License: CC-BY-SA-4.0)
+%\end{center}
+
 \end{block}
 \end{textblock}
 
