--- a/s2i2-hep-si2-pi-workshop-2017.tex
+++ b/s2i2-hep-si2-pi-workshop-2017.tex
@@ -1,6 +1,7 @@
 \documentclass[final]{beamer}
 % http://tex.stackexchange.com/questions/56205/wrapfigure-beamer-style
 \usepackage{color}
+\usepackage{transparent}
 %\usepackage{cutwin}
 %\usetheme{RJH}
 \usetheme{Berkeley}
@@ -33,10 +34,7 @@
 
 \begin{textblock}{84.0}(1,2)
 \begin{center}
-\includegraphics[width=0.95\textwidth]{images/s2i2-banner.jpg}
-%\begin{LARGE}
-%S2I2-HEP - Conceptualization of an S2I2 Institute for High Energy Physics
-%\end{LARGE}
+{\transparent{0.2}\includegraphics[width=0.95\textwidth]{images/s2i2-banner.jpg}}
 \end{center}
 \end{textblock}
 
