--- a/images/README
+++ b/images/README
@@ -25,3 +25,17 @@ https://cds.cern.ch/record/1211045
 https://mediastream.cern.ch/MediaArchive/Photo/Public/2009/0910152/0910152_02/0910152_02-A5-at-72-dpi.jpg
 CERN-AC-0910152-02 
 
+Event display of a H -> 4mu candidate event
+http://cds.cern.ch/record/1459499
+run204769_evt71902630_VP1Base.png
+ATLAS-PHO-COLLAB-2012-010
+
+Overall view of the LHC
+Vue d'ensemble du LHC
+http://cds.cern.ch/record/1708847
+http://cds.cern.ch/record/1708847/files/Screen%20shot%202014-06-24%20at%2013.24.59.png?subformat=icon-640
+CERN-LHC-cutaway-view-medium.png
+OPEN-PHO-ACCEL-2014-001
+
+
+
