--- a/s2i2-hep-si2-pi-workshop-2017.tex
+++ b/s2i2-hep-si2-pi-workshop-2017.tex
@@ -34,31 +34,80 @@
 
 \begin{textblock}{84.0}(1,2)
 \begin{center}
-{\transparent{0.2}\includegraphics[width=0.95\textwidth]{images/s2i2-banner.jpg}}
+%{\transparent{0.2}\includegraphics[width=0.95\textwidth]{images/s2i2-banner-50percent.png}}
+\includegraphics[width=0.95\textwidth]{images/s2i2-banner-50percent.png}
 \end{center}
 \end{textblock}
 
-\begin{textblock}{84.0}(1,4)
+\begin{textblock}{84.0}(1,3)
 \begin{center}
-\begin{huge}
-\color{white}{
-S2I2-HEP - Conceptualization of an S2I2 Institute for High Energy Physics
+\begin{Huge}
+%\color{white}{
+\textbf{
+Conceptualization of an S2I2 Institute \\
+~~for High Energy Physics (S2I2-HEP)
 }
-\end{huge}
+%}
+\end{Huge}
 \end{center}
 \end{textblock}
 
-\begin{textblock}{84.0}(6,7)
+\begin{textblock}{84.0}(2,8.8)
 \begin{center}
-\begin{LARGE}
-\color{white}{
-PIs: Peter Elmer (Princeton U.), Mark Neubauer (U.Illinois Urbana-Champaign), \\ Mike Sokoloff (U.Cincinnati)
+\begin{Large}
+\textbf{
+%PIs: Peter Elmer (Princeton U.), Mark Neubauer (U.Illinois Urbana-Champaign), \\ Mike Sokoloff (U.Cincinnati)
+PIs: Peter Elmer (Princeton Univ.), Mark Neubauer (Univ. of Illinois \\ 
+at Urbana-Champaign), Mike Sokoloff (Univ. of Cincinnati)
 }
-\end{LARGE}
+\end{Large}
 \end{center}
 \end{textblock}
 
-\begin{textblock}{38.0}(4,14)
+\begin{textblock}{78.0}(4,14)
+\begin{block}{The S2I2-HEP Project}
+The primary goal of the S2I2-HEP conceptualization project is to
+prepare a strategic plan for a potential NSF Scientific Software
+Innovation Institute (S2I2) to develop software for experiments
+taking data in the ``High-Luminosity Large Hadron Collider'' (HL-LHC)
+era in the 2020s. In addition, we are working with the HEP Software
+Foundation to prepare a larger HEP Community White Paper (CWP)
+describing a global roadmap for HEP Software and Computing R\&D for
+the 2020s. To this end we are organizing a number of workshops
+between Fall 2016 and Summer 2017.
+The LHC experiments, for example, use nearly 0.5 Exabyte of
+storage today, and planned upgrades through the 2020s will increase this
+by more than a factor of 100. 
+\end{block}
+\end{textblock}
+
+\begin{textblock}{38.0}(4,25)
+\begin{block}{High-Luminosity Large Hadron Collider (HL-LHC)}
+The primary goal of the S2I2-HEP conceptualization project is to
+prepare a strategic plan for a potential NSF Scientific Software
+Innovation Institute (S2I2) to develop software for experiments
+taking data in the ``High-Luminosity Large Hadron Collider'' (HL-LHC)
+era in the 2020s. In addition, we are working with the HEP Software
+Foundation to prepare a larger HEP Community White Paper (CWP)
+describing a global roadmap for HEP Software and Computing R\&D for
+the 2020s. To this end we are organizing a number of workshops
+between Fall 2016 and Summer 2017.
+The LHC experiments, for example, use nearly 0.5 Exabyte of
+storage today, and planned upgrades through the 2020s will increase this
+by more than a factor of 100. 
+~~~ \\
+~~~ \\
+\begin{figure}[tbph]
+\centering
+\includegraphics[width=0.96\textwidth]{images/CERN-LHC-cutaway-view-medium.png}
+%\begin{center}
+%\end{center}
+\end{figure}
+\end{block}
+\end{textblock}
+
+
+\begin{textblock}{38.0}(44,25)
 \begin{block}{High Energy Physics (HEP)}
 %\begin{center}
 The quest to understand the fundamental building blocks of nature,
@@ -82,8 +131,9 @@ aim to answer these questions over the next 20 years.
 ~~~ \\
 \begin{figure}[tbph]
 \centering
-\includegraphics[width=0.48\textwidth]{images/0910152_02-A5-at-72-dpi.jpg}
-\includegraphics[width=0.50\textwidth]{images/eemm_run195099_evt137440354_ispy_3d-annotated-2.png}
+%\includegraphics[width=0.48\textwidth]{images/0910152_02-A5-at-72-dpi.jpg}
+\includegraphics[width=0.41\textwidth]{images/run204769_evt71902630_VP1Base-half.png}
+\includegraphics[width=0.42\textwidth]{images/eemm_run195099_evt137440354_ispy_3d-annotated-2.png}
 %\begin{center}
 %{\small \copyright~2009-2016 CERN (License: CC-BY-SA-4.0)}
 %\end{center}
@@ -93,24 +143,6 @@ aim to answer these questions over the next 20 years.
 
 
 
-
-\begin{textblock}{38.0}(44,14)
-\begin{block}{The DIANA/HEP Project}
-The primary goal of DIANA/HEP is to develop state-of-the-art tools
-for experiments which acquire, reduce, and analyze petabytes of
-data. Improving performance, interoperability, and collaborative
-tools through modifications and additions to ROOT and other packages
-broadly used by the community will allow users to more fully exploit
-the data being acquired at CERN's Large Hadron Collider (LHC) and
-other facilities. The LHC experiments, for example, use nearly 0.5 Exabyte of
-storage today, and planned upgrades through the 2020s will increase this
-by more than a factor of 100. 
-%\begin{figure}[tbph]
-%\centering
-%\includegraphics[width=0.8\textwidth]{diana-hep-goals.png}
-%\end{figure}
-\end{block}
-\end{textblock}
 
 
 
