--- a/s2i2-hep-si2-pi-workshop-2017.tex
+++ b/s2i2-hep-si2-pi-workshop-2017.tex
@@ -103,6 +103,7 @@ by more than a factor of 100.
 %\begin{center}
 %\end{center}
 \end{figure}
+Reduce size of above image. Timeline picture through 2030s.
 \end{block}
 \end{textblock}
 
@@ -141,6 +142,11 @@ aim to answer these questions over the next 20 years.
 \end{block}
 \end{textblock}
 
+\begin{textblock}{38.0}(44,63)
+\begin{block}{The HEP Community and Software Ecosystem}
+HEP collaborations, US scientists/students involved in LHC, etc. (Additional text to fill in.)
+\end{block}
+\end{textblock}
 
 
 
@@ -156,7 +162,7 @@ aim to answer these questions over the next 20 years.
 
 
 
-\begin{textblock}{38.0}(44,102)
+\begin{textblock}{38.0}(44,107)
 \begin{block}{Acknowledgement}
 This project is supported by National Science Foundation grants ACI-1558216, ACI-1558219, and ACI-1558233. Any opinions, findings, conclusions or recommendations expressed in this material are those of the developers and do not necessarily reflect the views of the National Science Foundation. \\
 %~~\\
