--- a/s2i2-hep-si2-pi-workshop-2017.tex
+++ b/s2i2-hep-si2-pi-workshop-2017.tex
@@ -149,6 +149,14 @@ HEP collaborations, US scientists/students involved in LHC, etc. (Additional tex
 \end{textblock}
 
 
+\begin{textblock}{38.0}(44,70)
+\begin{block}{The HEP Community and Software Ecosystem}
+\begin{figure}[tbph]
+\centering
+\includegraphics[width=0.80\textwidth]{images/20170125-HSF-SDSC-Workshop-group-photo.jpg}
+\end{figure}
+\end{block}
+\end{textblock}
 
 
 
