Checkpoint to github

--- a/s2i2-hep-si2-pi-workshop-2017.tex
+++ b/s2i2-hep-si2-pi-workshop-2017.tex
@@ -34,7 +34,6 @@
 
 \begin{textblock}{84.0}(1,2)
 \begin{center}
-%{\transparent{0.2}\includegraphics[width=0.95\textwidth]{images/s2i2-banner-50percent.png}}
 \includegraphics[width=0.95\textwidth]{images/s2i2-banner-50percent.png}
 \end{center}
 \end{textblock}
@@ -56,7 +55,6 @@ Conceptualization of an S2I2 Institute \\
 \begin{center}
 \begin{Large}
 \textbf{
-%PIs: Peter Elmer (Princeton U.), Mark Neubauer (U.Illinois Urbana-Champaign), \\ Mike Sokoloff (U.Cincinnati)
 PIs: Peter Elmer (Princeton Univ.), Mark Neubauer (Univ. of Illinois \\ 
 at Urbana-Champaign), Mike Sokoloff (Univ. of Cincinnati)
 }
@@ -82,33 +80,6 @@ by more than a factor of 100.
 \end{textblock}
 
 \begin{textblock}{38.0}(4,25)
-\begin{block}{High-Luminosity Large Hadron Collider (HL-LHC)}
-The primary goal of the S2I2-HEP conceptualization project is to
-prepare a strategic plan for a potential NSF Scientific Software
-Innovation Institute (S2I2) to develop software for experiments
-taking data in the ``High-Luminosity Large Hadron Collider'' (HL-LHC)
-era in the 2020s. In addition, we are working with the HEP Software
-Foundation to prepare a larger HEP Community White Paper (CWP)
-describing a global roadmap for HEP Software and Computing R\&D for
-the 2020s. To this end we are organizing a number of workshops
-between Fall 2016 and Summer 2017.
-The LHC experiments, for example, use nearly 0.5 Exabyte of
-storage today, and planned upgrades through the 2020s will increase this
-by more than a factor of 100. 
-~~~ \\
-~~~ \\
-\begin{figure}[tbph]
-\centering
-\includegraphics[width=0.96\textwidth]{images/CERN-LHC-cutaway-view-medium.png}
-%\begin{center}
-%\end{center}
-\end{figure}
-Reduce size of above image. Timeline picture through 2030s.
-\end{block}
-\end{textblock}
-
-
-\begin{textblock}{38.0}(44,25)
 \begin{block}{High Energy Physics (HEP)}
 %\begin{center}
 The quest to understand the fundamental building blocks of nature,
@@ -133,28 +104,53 @@ aim to answer these questions over the next 20 years.
 \begin{figure}[tbph]
 \centering
 %\includegraphics[width=0.48\textwidth]{images/0910152_02-A5-at-72-dpi.jpg}
-\includegraphics[width=0.41\textwidth]{images/run204769_evt71902630_VP1Base-half.png}
+\includegraphics[width=0.41\textwidth]{images/CERN-LHC-cutaway-view-medium.png}
+%\includegraphics[width=0.41\textwidth]{images/run204769_evt71902630_VP1Base-half.png}
 \includegraphics[width=0.42\textwidth]{images/eemm_run195099_evt137440354_ispy_3d-annotated-2.png}
 %\begin{center}
-%{\small \copyright~2009-2016 CERN (License: CC-BY-SA-4.0)}
 %\end{center}
 \end{figure}
+{\small \copyright~2009-2016 CERN (License: CC-BY-SA-4.0)}
 \end{block}
 \end{textblock}
 
-\begin{textblock}{38.0}(44,63)
+\begin{textblock}{38.0}(4,63)
 \begin{block}{The HEP Community and Software Ecosystem}
 HEP collaborations, US scientists/students involved in LHC, etc. (Additional text to fill in.)
 \end{block}
 \end{textblock}
 
+\begin{textblock}{38.0}(44,25)
+\begin{block}{High-Luminosity Large Hadron Collider (HL-LHC)}
+The LHC experiments, for example, use nearly 0.5 Exabyte of
+storage today, and planned upgrades through the 2020s will increase this
+by more than a factor of 100. 
+\end{block}
+\end{textblock}
+
+
+
+
 
 \begin{textblock}{38.0}(44,70)
-\begin{block}{The HEP Community and Software Ecosystem}
+\begin{block}{HSF Community White Paper Workshop at SDSC, 23-26 Jan 2017}
 \begin{figure}[tbph]
 \centering
-\includegraphics[width=0.80\textwidth]{images/20170125-HSF-SDSC-Workshop-group-photo.jpg}
+\includegraphics[width=0.60\textwidth]{images/20170125-HSF-SDSC-Workshop-group-photo.jpg}
 \end{figure}
+\small{Meeting agenda: \url{http://indico.cern.ch/event/570249/}} \\
+
+\end{block}
+\end{textblock}
+
+\begin{textblock}{38.0}(44,90)
+\begin{block}{S2I2 HEP/CS workshop at NCSA, 7-9 Dec 2016}
+\begin{figure}[tbph]
+\centering
+\includegraphics[width=0.60\textwidth]{images/20161208-s2i2-hep-cs-group-photo.jpg}
+\end{figure}
+\small{Meeting agenda: \url{https://indico.cern.ch/event/575443/}} \\
+\small{Summary: \url{http://s2i2-hep.org/downloads/s2i2-hep-cs-workshop-summary.pdf}}
 \end{block}
 \end{textblock}
 
@@ -165,17 +161,35 @@ HEP collaborations, US scientists/students involved in LHC, etc. (Additional tex
 
 
 
+\begin{textblock}{14.0}(4,109)
+\begin{block}{Online poster with links}
+\begin{figure}[tbph]
+\centering
+\includegraphics[width=0.30\textwidth]{images/qr-s2i2-hep-si2-pi-workshop-2017.png}
+\end{figure}
+\begin{center}
+\url{http://goo.gl/k22mD9}
+\end{center}
+\end{block}
+\end{textblock}
+
+
+\begin{textblock}{22.0}(20,109)
+\begin{block}{XYZ}
+Extra text as needed
+~~ \\
+~~ \\
+\end{block}
+\end{textblock}
 
 
 
-
-
-\begin{textblock}{38.0}(44,107)
+\begin{textblock}{38.0}(44,109)
 \begin{block}{Acknowledgement}
 This project is supported by National Science Foundation grants ACI-1558216, ACI-1558219, and ACI-1558233. Any opinions, findings, conclusions or recommendations expressed in this material are those of the developers and do not necessarily reflect the views of the National Science Foundation. \\
 %~~\\
 %\begin{center}
-Images \copyright~2009-2016 CERN (License: CC-BY-SA-4.0)
+%Images \copyright~2009-2016 CERN (License: CC-BY-SA-4.0)
 %\end{center}
 
 \end{block}
